tests/fixtures/invalid/list_div_str.py
# Cannot divide List[int] and Str
x: float = [1, 2, 3] / "hello"
